--- a/ruthProject/src/app/small-recipe/small-recipe.component.css
+++ b/ruthProject/src/app/small-recipe/small-recipe.component.css
@@ -3,8 +3,9 @@
 } */
 
 :host {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    /* display: flex;
+    flex-direction: row; */
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: center;
@@ -13,10 +14,10 @@
     /* מרווח בין הקומפוננטות */
 }
 
-#imgcss {
+/* #imgcss {
     width: 70px;
     height: 140px;
-}
+} */
 
 
 
