--- a/ruthProject/src/app/login/login.component.html
+++ b/ruthProject/src/app/login/login.component.html
@@ -1,11 +1,18 @@
-<div *ngIf="!showLogin">
-<app-all-recipes></app-all-recipes>
-</div>
-<div [formGroup] = "LoginForm">
-    <input placeholder="Name" type = "text" formControlName = "userName">
-    <p *ngIf="showErrorMessege">pls enter password again!</p>
-    <input placeholder="password" type = "text" formControlName = "password">
-    <button type="submit" [disabled]="!this.LoginForm.valid" (click)="login()">login</button>
-
- </div>
-<!-- <p *ngIf ="res"></p> -->
+<div class="container">
+    <div *ngIf="!showLogin">
+        <app-all-recipes></app-all-recipes>
+    </div>
+    <div class="login-form" [formGroup]="LoginForm">
+        <div class="form-group">
+            <label for="userName">Name</label>
+            <input id="userName" class="form-control" placeholder="Name" type="text" formControlName="userName">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input id="password" class="form-control" placeholder="Password" type="password" formControlName="password">
+            <p *ngIf="showErrorMessege" class="error-message">Please enter the password again!</p>
+        </div>
+        <button class="btn btn-primary btn-block" type="submit" [disabled]="!this.LoginForm.valid"
+            (click)="login()">Login</button>
+    </div></div>
+    <!-- <p *ngIf ="res"></p> -->
