add- more design

--- a/ruthProject/src/app/login/login.component.html
+++ b/ruthProject/src/app/login/login.component.html
@@ -2,6 +2,7 @@
     <div *ngIf="!showLogin">
         <app-all-recipes></app-all-recipes>
     </div>
+    <!-- <div *ngIf="showLogin"> -->
     <div class="login-form" [formGroup]="LoginForm">
         <div class="form-group">
             <label for="userName">Name</label>
@@ -9,10 +10,11 @@
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input id="password" class="form-control" placeholder="Password" type="password" formControlName="password">
+            <input id="password" class="form-control" placeholder="Password" type="text" formControlName="password">
             <p *ngIf="showErrorMessege" class="error-message">Please enter the password again!</p>
         </div>
         <button class="btn btn-primary btn-block" type="submit" [disabled]="!this.LoginForm.valid"
             (click)="login()">Login</button>
     </div></div>
+<!-- </div> -->
     <!-- <p *ngIf ="res"></p> -->
