--- a/ruthProject/src/app/top-bar/top-bar.component.html
+++ b/ruthProject/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,31 @@
 <p>top-bar works!</p>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">My Recipes App</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/allRecipes">All Recipes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/addRecipe">Add Recipe</a>
+        </li>
+      </ul>
+      <!-- <form class="form-inline my-2 my-lg-0">
+        <button class="btn btn-outline-success my-2 my-sm-0" (click)="logout()">Logout</button>
+      </form> -->
+    </div>
+  </nav>
+  
+  
