--- a/ruthProject/src/app/details-recipe/details-recipe.component.html
+++ b/ruthProject/src/app/details-recipe/details-recipe.component.html
@@ -24,5 +24,5 @@
     </div>
     </ng-container>
 </div>
-    <input type="button" class="btn btn-danger" value="deleteRecipe" (click)="deleteRecipe()">
-    <input type="button" class="btn btn-danger" value="updateRecipe" (click)="updateRecipe()">
+    <input *ngIf="currentUserId===recipe?.idUser?.id" type="button" class="btn btn-danger" value="deleteRecipe" (click)="deleteRecipe()">
+    <input *ngIf="currentUserId===recipe?.idUser?.id" type="button" class="btn btn-danger" value="updateRecipe" (click)="updateRecipe()">
