--- a/ruthProject/src/app/top-bar/top-bar.component.html
+++ b/ruthProject/src/app/top-bar/top-bar.component.html
@@ -10,20 +10,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Login</a>
+          <a class="nav-link" routerLink="/">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/register">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/allRecipes">All Recipes</a>
+          <a class="nav-link" routerLink="allRecipes">All Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/addRecipe">Add Recipe</a>
+          <a class="nav-link" routerLink="addRecipe">Add Recipe</a>
         </li>
       </ul>
+      <button class="btn btn-outline-success my-2 my-sm-0" (click)="logout()">Logout</button>
+
       <!-- <form class="form-inline my-2 my-lg-0">
-        <button class="btn btn-outline-success my-2 my-sm-0" (click)="logout()">Logout</button>
       </form> -->
     </div>
   </nav>
