--- a/ruthProject/src/app/all-recipes/all-recipes.component.css
+++ b/ruthProject/src/app/all-recipes/all-recipes.component.css
@@ -1,12 +1,45 @@
-.container{
+.cont{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: center;
-    margin-right: 20px;
+    margin-right: 35px;
+    /* margin-bottom: 30px; */
+
+}
+.filter{
+    width: 88px;
+    margin-left: 15px;
+    
 }
 /* img{
     width: 10%;
     height: 25%;
+} */
+/* .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }  */
+  
+  /* .filter-form {
+    margin-bottom: 20px;
+  } */
+/*   
+  .recipe-item { 
+    width: calc(33.33% - 20px); 
+    margin-bottom: 20px;
+    width: 18rem;
+   } 
+  .recipes-list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap; 
+    /* justify-content: f; */
+    /* align-items:  center;
+    margin-right: 20%;  */
+   /* } */
+  /* .card {
+  margin-bottom: 20px;
 } */
