--- a/ruthProject/src/app/details-recipe/details-recipe.component.html
+++ b/ruthProject/src/app/details-recipe/details-recipe.component.html
@@ -1,28 +1,34 @@
-<div id="container">
+<div id="container" class="container mt-5">
     <ng-container *ngIf="recipe">
         <div class="card recipe-details">
             <div class="card-body">
-            <h1 class="card-title">{{recipe.recipeName}}</h1>
-            <div class="category">
-            <h3><img id="icon" src="{{recipe.categoryId.iconPath}}" alt="icon"> {{recipe.categoryId.name}} </h3>
+                <h1 class="card-title">{{recipe.recipeName}}</h1>
+                <div class="category d-flex align-items-center">
+                    <h3>
+                        <img id="icon" [src]="recipe.categoryId.iconPath" alt="icon" class="mr-2">
+                        {{recipe.categoryId.name}}
+                    </h3>
+                </div>
+                <div class="stars">
+                    <p>Level:</p>
+                    <span class="star" *ngFor="let star of stars"><span>&#9733;</span></span>
+                </div>
+                <img class="card-img-top img-fluid" [src]="recipe.imag7" alt="imag">
+                <h3>Ingredients:</h3>
+                <ul class="list-group">
+                    <li *ngFor="let ingredient of recipe.ingredients" class="list-group-item">
+                        {{ ingredient }}
+                    </li>
+                </ul>
+                <h3>Preparation:</h3>
+                <ol class="list-group">
+                    <li *ngFor="let step of recipe.preparation" class="list-group-item">{{ step }}</li>
+                </ol>
             </div>
-            <div class="stars">
-                <p>Level:</p><span class="star" *ngFor="let star of stars"><span>&#9733;</span></span>
-            </div>
-            <img class="card-img-top" src="{{recipe.imag7}}" alt="imag">
-            <h3>Ingredients:</h3>
-            <ul class="list-group">
-                <li *ngFor="let ingredient of recipe.ingredients" class="list-group-item">
-                    {{ ingredient }}
-                </li>
-            </ul>
-            <h3>Preparation:</h3>
-            <ol class="list-group">
-                <li *ngFor="let step of recipe.preparation"class="list-group-item">{{ step }}</li>
-            </ol>
         </div>
-    </div>
     </ng-container>
 </div>
-    <input *ngIf="currentUserId===recipe?.idUser?.id" type="button" class="btn btn-danger" value="deleteRecipe" (click)="deleteRecipe()">
-    <input *ngIf="currentUserId===recipe?.idUser?.id" type="button" class="btn btn-danger" value="updateRecipe" (click)="updateRecipe()">
+<input *ngIf="currentUserId===recipe?.idUser?.id" type="button" class="btn btn-danger mt-3 mr-3" value="deleteRecipe"
+    (click)="deleteRecipe()">
+<input *ngIf="currentUserId===recipe?.idUser?.id" type="button" class="btn btn-primary mt-3" value="updateRecipe"
+    (click)="updateRecipe()">
