--- a/ruthProject/src/app/register/register.component.html
+++ b/ruthProject/src/app/register/register.component.html
@@ -1,12 +1,29 @@
-
-<div [formGroup] = "RegisterForm">
-    <input placeholder="id" type = "text" formControlName = "id"><br>
-    <input placeholder="name" type = "text" formControlName = "userName"><br>
-    <input placeholder="adress" type = "text" formControlName = "adress"><br>
-    <input placeholder="email" type = "text" formControlName = "email"><br>
-    <input placeholder="password" type = "text" formControlName = "password"><br>
-    <button type="submit" [disabled]="!this.RegisterForm.valid" (click)="login()">login</button>
+<div class="container">
+    <div [formGroup]="RegisterForm">
+        <div class="form-group">
+            <label for="id">ID:</label>
+            <input type="text" class="form-control" id="id" formControlName="id">
+        </div>
+        <div class="form-group">
+            <label for="userName">Username:</label>
+            <input type="text" class="form-control" id="userName" formControlName="userName">
+        </div>
+        <div class="form-group">
+            <label for="adress">Address:</label>
+            <input type="text" class="form-control" id="adress" formControlName="adress">
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" formControlName="email">
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" formControlName="password">
+        </div><br>
+        <button type="submit" class="btn btn-primary" [disabled]="!RegisterForm.valid"
+            (click)="login()">Register</button>
+    </div>
 </div>
 <ng-container *ngIf="res===true">
-    <p>the user is exist!</p>
+    <p class="alert alert-success">The user already exists!</p>
 </ng-container>
