--- a/ruthProject/src/app/top-bar/top-bar.component.html
+++ b/ruthProject/src/app/top-bar/top-bar.component.html
@@ -1,19 +1,17 @@
-<p>top-bar works!</p>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">My Recipes App</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+  <a class="navbar-brand" href="#">My Recipes App</a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Login</a>
+          <a class="nav-link active" aria-current="page" routerLink="/">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/register">Register</a>
+          <a class="nav-link active" routerLink="/register">Register</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="allRecipes">All Recipes</a>
@@ -22,10 +20,8 @@
           <a class="nav-link" routerLink="addRecipe">Add Recipe</a>
         </li>
       </ul>
-      <button class="btn btn-outline-success my-2 my-sm-0" (click)="logout()">Logout</button>
-
-      <!-- <form class="form-inline my-2 my-lg-0">
-      </form> -->
+      <button class="btn btn-outline-success" (click)="logout()">Logout</button>
+    </div>
     </div>
   </nav>
   
