drop register from navbar

--- a/ruthProject/src/app/add-recipe/add-recipe.component.html
+++ b/ruthProject/src/app/add-recipe/add-recipe.component.html
@@ -84,7 +84,7 @@
             </div>
         </div><br>
 
-        <button type="submit" class="btn btn-primary" [disabled]="!this.RecipeForm.valid" (click)="addRecipe()">Add Recipe</button>
+        <button type="submit" class="btn btn-outline-success" [disabled]="!this.RecipeForm.valid" (click)="addRecipe()">Add Recipe</button>
 
 
     </div>
