--- a/ruthProject/src/app/top-bar/top-bar.component.html
+++ b/ruthProject/src/app/top-bar/top-bar.component.html
@@ -10,9 +10,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="/">Login</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link active" routerLink="/register">Register</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" routerLink="allRecipes">All Recipes</a>
         </li>
@@ -20,7 +20,7 @@
           <a class="nav-link" routerLink="addRecipe">Add Recipe</a>
         </li>
       </ul>
-      <button class="btn btn-outline-success" (click)="logout()">Logout</button>
+      <button class="btn btn-outline-secondary" (click)="logout()">Logout</button>
     </div>
     </div>
   </nav>
