--- a/ruthProject/src/app/all-recipes/all-recipes.component.html
+++ b/ruthProject/src/app/all-recipes/all-recipes.component.html
@@ -4,7 +4,7 @@
             <p>Filter the recipes by:</p>
         </div>
         <div class="form-group row">
-            <label for="categoryId" class="col-sm-2 col-form-label">Category:</label><br>
+            <label for="categoryId" class="col-sm-2 col-form-label lac">Category:</label><br>
             <div class="col-sm-10">
                 <select class="form-control filter" id="categoryId" formControlName="categoryId">
                     <option disabled selected>Select</option>
@@ -13,13 +13,13 @@
             </div>
         </div><br>
         <div class="form-group row">
-            <label for="name" class="col-sm-2 col-form-label">Name:</label><br>
+            <label for="name" class="col-sm-2 col-form-label lac">Name:</label><br>
             <div class="col-sm-10">
                 <input class="form-control filter" id="name" formControlName="name"><br>
             </div>
         </div>
         <div class="form-group row">
-            <label for="durinigTimeOfPreparation" class="col-sm-2 col-form-label">Preparation Time:</label><br>
+            <label for="durinigTimeOfPreparation" class="col-sm-2 col-form-label lac">Preparation Time:</label><br>
             <div class="col-sm-10">
                 <input class="form-control filter" formControlName="durinigTimeOfPreparation" type="number">
 
@@ -39,6 +39,6 @@
         </div>
     <!-- </div> -->
 <!-- </div> -->
-<!-- </div> -->
+<!-- </div> --></div>
 <!-- </div> -->
 <!-- </div> -->
