--- a/ruthProject/src/app/small-recipe/small-recipe.component.html
+++ b/ruthProject/src/app/small-recipe/small-recipe.component.html
@@ -6,6 +6,6 @@
       <span class="star" *ngFor="let star of stars"><span>&#9733;</span></span>
     </div>
     <p>during: {{recipee.preparationTimeInMinutes|myTime}}</p>
-    <img id="imgcss" src="{{recipee.imag7}}" alt="{{recipee.recipeName}}">
+    <div class="image-frame"><img id="imgcss" src="{{recipee.imag7}}" alt="{{recipee.recipeName}}"></div>
   </div>
 </ng-container>
